hotfix firebase hosting paths

--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,7 @@
       "**/node_modules/**"
     ],
     "rewrites": [
+      { "source": "/woodworking", "destination": "/woodworking.html" },
       { "source": "/contact", "destination": "/contact.html" },
       { "source": "/laser-engraving", "destination": "/laser-engraving.html" },
       { "source": "/3d-printing", "destination": "/3d-printing.html" },
